@@ -4,7 +4,6 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 import java.time.LocalDate;
 import java.util.Collections;
-import java.util.UUID;
 
 import jakarta.inject.Inject;
 import jakarta.persistence.EntityManager;
@@ -85,8 +84,6 @@ class DokumentBehandlingTjenesteTest {
                 .medFødselAdopsjonsdato(Collections.singletonList(fødselsdato))
                 .medDefaultSøknadTerminbekreftelse();
         lagBehandling();
-        var termindato = repositoryProvider.getFamilieHendelseRepository().hentAggregat(behandling.getId()).getGjeldendeTerminbekreftelse()
-                .get().getTermindato();
         assertThat(dokumentBehandlingTjeneste.utledFristMedlemskap(behandling))
                 .isEqualTo(fødselsdato.plusWeeks(fristUker));
     }
@@ -119,21 +116,26 @@ class DokumentBehandlingTjenesteTest {
         // Arrange
         behandling = scenario.lagre(repositoryProvider);
 
+        var bestilling = lagBestilling(DokumentMalType.INNHENTE_OPPLYSNINGER, null);
+
         // Act
-        dokumentBehandlingTjeneste.loggDokumentBestilt(behandling, DokumentMalType.INNHENTE_OPPLYSNINGER, UUID.randomUUID());
+        dokumentBehandlingTjeneste.loggDokumentBestilt(behandling, bestilling);
 
         // Assert
         var behandlingDokument = behandlingDokumentRepository.hentHvisEksisterer(behandling.getId());
         assertThat(behandlingDokument).isPresent();
         assertThat(behandlingDokument.get().getBestilteDokumenter()).hasSize(1);
-        assertThat(behandlingDokument.get().getBestilteDokumenter().get(0).getDokumentMalType()).isEqualTo(DokumentMalType.INNHENTE_OPPLYSNINGER.getKode());
+        assertThat(behandlingDokument.get().getBestilteDokumenter().getFirst().getDokumentMalType()).isEqualTo(DokumentMalType.INNHENTE_OPPLYSNINGER.getKode());
+        assertThat(behandlingDokument.get().getBestilteDokumenter().getFirst().getBestillingUuid()).isNotNull();
     }
 
     @Test
     void skal_returnere_true_når_dokument_er_bestilt() {
         // Arrange
         behandling = scenario.lagre(repositoryProvider);
-        dokumentBehandlingTjeneste.loggDokumentBestilt(behandling, DokumentMalType.INNHENTE_OPPLYSNINGER, UUID.randomUUID());
+        var bestilling = lagBestilling(DokumentMalType.INNHENTE_OPPLYSNINGER, null);
+
+        dokumentBehandlingTjeneste.loggDokumentBestilt(behandling, bestilling);
 
         // Act+Assert
         assertThat(dokumentBehandlingTjeneste.erDokumentBestilt(behandling.getId(), DokumentMalType.INNHENTE_OPPLYSNINGER)).isTrue();
@@ -143,7 +145,10 @@ class DokumentBehandlingTjenesteTest {
     void skal_returnere_false_når_dokument_ikke_er_bestilt() {
         // Arrange
         behandling = scenario.lagre(repositoryProvider);
-        dokumentBehandlingTjeneste.loggDokumentBestilt(behandling, DokumentMalType.ETTERLYS_INNTEKTSMELDING, UUID.randomUUID());
+
+        var bestilling = lagBestilling(DokumentMalType.ETTERLYS_INNTEKTSMELDING, DokumentMalType.ETTERLYS_INNTEKTSMELDING);
+
+        dokumentBehandlingTjeneste.loggDokumentBestilt(behandling, bestilling);
 
         // Act+Assert
         assertThat(dokumentBehandlingTjeneste.erDokumentBestilt(behandling.getId(), DokumentMalType.INNHENTE_OPPLYSNINGER)).isFalse();
@@ -182,5 +187,14 @@ class DokumentBehandlingTjenesteTest {
         // Assert
         var behandlingDokument = behandlingDokumentRepository.hentHvisEksisterer(behandling.getId());
         assertThat(behandlingDokument).isNotPresent();
+    }
+
+    private DokumentBestilling lagBestilling(DokumentMalType dokumentMal, DokumentMalType journalførSomMal) {
+        return DokumentBestilling.builder()
+            .medBehandlingUuid(behandling.getUuid())
+            .medDokumentMal(dokumentMal)
+            .medJournalførSom(journalførSomMal)
+            .medFritekst("test")
+            .build();
     }
 }
